apps/base/monitoring-prometheus-operator/deploy/alertmanager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-k8s
  labels:
    prometheus-target: alertmanager-k8s
spec:
  ports:
  - name: web
    port: 9093
    targetPort: web
  - name: reloader-web
    port: 8080
    targetPort: reloader-web
  selector:
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/component: alertmanager
    app.kubernetes.io/instance: k8s
  sessionAffinity: ClientIP
